--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kris/hw",
+    "name": "crifosu/hw",
     "description": "testing project",
     "type": "project",
     "require": {
